# model-explorer

./: .editorconfig  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
assets/environment/: environment-full.yaml  environment-hist.yaml
