[tool.poetry]
name = "model-explorer"
version = "0.1.0"
description = "model explorer"
authors = ["Nick Mazurkin <mazurkin@gmail.com>"]
readme = "README.md"

[[tool.poetry.source]]
name = "torch118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[tool.poetry.dependencies]
python = "3.10.12"
filelock = "3.15.4"
torch = { version = "=2.4.0+cu118", source="torch118"}
ai-edge-model-explorer = "0.1.8"
ai-edge-model-explorer-adapter = "0.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
